--- a/trs/tr3/parmes-tr-3-rev-1.lyx
+++ b/trs/tr3/parmes-tr-3-rev-1.lyx
@@ -221,8 +221,8 @@ key "Koziara2010"
 \end_layout
 
 \begin_layout Enumerate
-Simplified multi-body models comprising analytical rigid bodies bodies and
- predefined nonlinear springs (LS-DYNA based).
+Simplified multi-body models comprising analytical rigid bodies and predefined
+ nonlinear springs (LS-DYNA based).
 \end_layout
 
 \begin_layout Enumerate
